Use List.of() rather than Arrays.asList(). Because we're cool.